<resources>
    <string name="app_name">IUDigital</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="back">Atras</string>
    <string name="login">Login</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
</resources>